--- a/react-components/src/components/CharacterInfoCard/CharacterInfoBlock/style.css
+++ b/react-components/src/components/CharacterInfoCard/CharacterInfoBlock/style.css
@@ -1,14 +1,14 @@
 
-.big-card__infol-block {
+.character-info__block {
     margin-top: 20px;
 }
 
-.big-card__subtitle {
+.character-info__subtitle {
     font-size: 22px;
     color: grey;
 }
 
-.big-card__info {
+.character-info__info {
     font-size: 26px;
     color: white;
 }
