--- a/react-components/src/index.css
+++ b/react-components/src/index.css
@@ -7,3 +7,14 @@ body, #root {
   width: 100%;
   height: 100%;
 }
+
+.cards-container {
+  width: 100%;
+  
+  display: grid;
+  grid-template-columns: repeat( auto-fill, minmax(300px, 1fr) );
+  gap: 1%;
+  justify-items: center;
+
+  margin: 0 auto;
+}
