--- a/react-components/src/components/CharacterInfoCard/style.css
+++ b/react-components/src/components/CharacterInfoCard/style.css
@@ -1,4 +1,8 @@
-
+.character-info-card {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
 .character-info-card__imgage-container {
   width: 40%;
   height: 100%;
